...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtusername"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/josefin"
                    android:hint="@string/full_names"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnProceed"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:paddingStart="30dip"
                android:paddingEnd="26dip"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
...
